# wxcode-client

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  utils.rs  wxcode.rs
ui/: icon.rc  main.60  main.slint
