[package]
name = "wxcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1.5"
ureq = { version = "2.4.0", features = ["json", "charset"] }
anyhow = "1"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
chrono = "0.4.19"

[build-dependencies]
sixtyfps-build = "0.1.5"
embed-resource = "1.6.5"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]