[package]
name = "wxcode"
version = "1.0.0"
edition = "2021"

[dependencies]
slint = "0.2.1"
ureq = { version = "2.4.0", features = ["json", "charset"] }
anyhow = "1"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.6.3"
dirs = "4.0.0"

[build-dependencies]
sixtyfps-build = "0.1.5"
embed-resource = "1.6.5"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]